test-results/error_define.err
[31m./examples/error_define.cup:1:1: error: [UPP003] Macro definition for '@BadMacro' is missing parentheses. Use '@define BadMacro() { ... }'.[0m
@define BadMacro {
[31m^[0m
